--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Variedade de Lanches</h2>
             <div class="lanches">
                 <div class="lanche">
-                    <img src="https://via.placeholder.com/250x150?text=Hamb%C3%BArguer+Lipe" alt="Hambúrguer Lipe">
+                    <img src="Triplo-Monster.jpg"
                     <h3>Hambúrguer Lipe</h3>
                     <p>Um hambúrguer suculento, feito com carne 100% bovina e queijo cheddar.</p>
                     <span>R$ 15,00</span>
