--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span>R$ 15,00</span>
                 </div>
                 <div class="lanche">
-                    <img src="https://via.placeholder.com/250x150?text=Cheeseburger+Bacon" alt="Cheeseburger Bacon">
+                    <img src="bacon.jpg"
                     <h3>Cheeseburger Bacon</h3>
                     <p>Cheddar cremoso, bacon crocante e nosso molho especial.</p>
                     <span>R$ 18,00</span>
