--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span>R$ 18,00</span>
                 </div>
                 <div class="lanche">
-                    <img src="https://via.placeholder.com/250x150?text=Sandu%C3%ADche+Vegetariano" alt="Sanduíche Vegetariano">
+                    <img src="vegetal.webp">
                     <h3>Sanduíche Vegetariano</h3>
                     <p>Opção leve, com vegetais frescos e maionese vegana.</p>
                     <span>R$ 12,00</span>
