--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span>R$ 12,00</span>
                 </div>
                 <div class="lanche">
-                    <img src="https://via.placeholder.com/250x150?text=Frango+Grelhado" alt="Frango Grelhado">
+                    <img src="file.webp">
                     <h3>Frango Grelhado</h3>
                     <p>Frango grelhado com queijo e molho de mostarda e mel.</p>
                     <span>R$ 16,00</span>
